Mon Jan 23 21:55:12 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/RTPS/Sedp.cpp:
        * tests/transport/rtps_reliability/rtps_reliability.cpp:

          Fixed SunCC-specific compiler errors.  Turns out there's
          a lot of standard-compliant C++ that this compiler can't
          handle at all.  Sometimes without even listing a line number
          with the error.

        * dds/DCPS/RTPS/RtpsDiscovery.cpp:
        * dds/DCPS/transport/framework/DataLinkSet.inl:
        * tests/DCPS/Serializer/AlignmentTest.cpp:

          Fixed warnings.

Mon Jan 23 19:02:17 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/Discovery.h:

          Added required #include of <string>.

        * dds/DCPS/RTPS/RtpsDiscovery.cpp:

          Fixes for building on platforms that lack environment variables.

Mon Jan 23 18:57:27 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/DataWriterImpl.h:
        * dds/DCPS/DataWriterImpl.cpp:
        * dds/idl/CPPTemplate.txt:
        * dds/idl/HTemplate.txt:

          Fixes for building with content_subscription=0.

Mon Jan 23 18:31:30 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/Discovery.h:
        * dds/DCPS/Discovery.cpp:
        * dds/DCPS/RTPS/RtpsDiscovery.h:
        * dds/DCPS/RTPS/RtpsDiscovery.cpp:
        * dds/DCPS/RTPS/RtpsInfo.h:
        * dds/DCPS/RTPS/RtpsInfo.cpp:
        * dds/DCPS/RTPS/Sedp.h:
        * dds/DCPS/RTPS/Sedp.cpp:
        * dds/DCPS/RTPS/Spdp.h:
        * dds/DCPS/RTPS/Spdp.cpp:
        * tests/DCPS/ConfigFile/ConfigFile.cpp:
        * tests/DCPS/RtpsDiscovery/RtpsDiscovery.mpc:
        * tests/DCPS/UnitTests/UnitTests.mpc:

          Fixes for built_in_topics=0.
          RTPS Discovery will not work with built_in_topics=0.

Mon Jan 23 18:25:25 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/BuiltInTopicUtils.h:

          BuiltinTopicKeyLess::operator() should be const.

        * dds/DCPS/DataReaderImpl.cpp: